tests/lang/compile_fail/bare_dep_reference.expo
fn main
  h = Headers{}
  print(h)
end
